added more component styling/classes/structure

--- a/src/components/Dispatcher/Dispatcher-styles.scss
+++ b/src/components/Dispatcher/Dispatcher-styles.scss
@@ -3,5 +3,13 @@ $enable-css-modules: true;
 @import "../../../node_modules/dibs-styles/exports/grid";
 
 .tabsWrapper {
-	display: block;
+    display: block;
+}
+
+.tabName {
+
+}
+
+.tabContent {
+
 }
